"back" arrow is not supported on mobile browsers Fixes #41

--- a/styles/style.css
+++ b/styles/style.css
@@ -70,6 +70,7 @@ body {
   height: 5vh;
   display: flex;
   justify-content: space-between;
+  /* justify-content: space-around; */
 }
 
 /* footer content */
@@ -86,6 +87,7 @@ body {
 .download {
   visibility: hidden;
   cursor: pointer;
+  font-size: 1.2em;
 }
 
 /* game content */
